update code layout footer

--- a/app/code/OpenCert/Hello/view/frontend/templates/helloworld.phtml
+++ b/app/code/OpenCert/Hello/view/frontend/templates/helloworld.phtml
@@ -3,3 +3,34 @@ $this->getCatalogSession()->setMyName('data sesssion example');
 echo $block->getCatalogSession()->getMyName();
 echo "<br><br>";
 echo $this->getHelloWorldTxt(); ?></h1>
+<table>
+	<tr>
+		<td>
+			<h3>One Bad Apple? Top Apple Experts Weigh In on Controversial Slow iPhones</h3>
+			<p>
+				<a href="">The post One Bad Apple? Top Apple Experts Weigh In on Controversial Slow iPhones appeared first on Macfixit Australia Blog.</a>
+			</p>
+			<div>
+				<button type="button">Readmore</button>
+			</div>
+		</td>
+		<td>
+			<h3>One Bad Apple? Top Apple Experts Weigh In on Controversial Slow iPhones</h3>
+			<p>
+				<a href="">The post One Bad Apple? Top Apple Experts Weigh In on Controversial Slow iPhones appeared first on Macfixit Australia Blog.</a>
+			</p>
+			<div>
+				<button type="button">Readmore</button>
+			</div>
+		</td>
+		<td>
+			<h3>One Bad Apple? Top Apple Experts Weigh In on Controversial Slow iPhones</h3>
+			<p>
+				<a href="">The post One Bad Apple? Top Apple Experts Weigh In on Controversial Slow iPhones appeared first on Macfixit Australia Blog.</a>
+			</p>
+			<div>
+				<button type="button">Readmore</button>
+			</div>
+		</td>
+	</tr>
+</table>
