--- a/app/design/frontend/Miracle/lenovo/web/css/source/_extend.less
+++ b/app/design/frontend/Miracle/lenovo/web/css/source/_extend.less
@@ -40,6 +40,10 @@
 .block-search{
 	float: left;
 }
+.ft-promise{
+	background: #f5f5f5;
+    padding: 15px 0px;
+}
 .footer-container{
 	.footer{
 		.footer-middle{
