--- a/app/code/OpenTechiz/Blog/view/frontend/layout/blog_view_index.xml
+++ b/app/code/OpenTechiz/Blog/view/frontend/layout/blog_view_index.xml
@@ -2,7 +2,9 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="OpenTechiz\Blog\Block\PostView" name="blog.list" template="OpenTechiz_Blog::view.phtml" />
+            <block class="OpenTechiz\Blog\Block\PostView" name="blog.view" template="OpenTechiz_Blog::view.phtml" />
+            <block class="OpenTechiz\Blog\Block\CommentList" name="blog.comment.list" template="OpenTechiz_Blog::listcomment.phtml" />
+            <block class="OpenTechiz\Blog\Block\CommentForm" name="blog.comment.form" template="OpenTechiz_Blog::formcomment.phtml" />
         </referenceContainer>
     </body>
 </page>
