--- a/app/code/OpenTechiz/Blog/view/frontend/templates/formcomment.phtml
+++ b/app/code/OpenTechiz/Blog/view/frontend/templates/formcomment.phtml
@@ -1,7 +1,8 @@
-<form class="form" action="<?php echo $block->getFormAction(); ?>" method="post">
+<form id="comment-form" action="<?php echo $block->getFormAction(); ?>" method="post">
 
     <fieldset class="fieldset">
         <legend class="legend"><span><?php /* @escapeNotVerified */ echo __('Add new comment') ?></span></legend><br>
+        <div class="note"></div>
         <div class="field required">
             <label for="author" class="label">
                 <span><?php /* @escapeNotVerified */ echo __('Name') ?></span>
@@ -28,10 +29,19 @@
     <input type="hidden" name="post_id" value="<?php echo $block->getPostID() ?>"/>
     <div class="actions-toolbar">
         <div class="primary">
-            <button type="submit" class="action submit primary" title="<?php /* @escapeNotVerified */ echo __('Submit') ?>">
+            <button type="submit" id="comment_ajax" class="action submit primary" title="<?php /* @escapeNotVerified */ echo __('Submit') ?>">
                 <span><?php /* @escapeNotVerified */ echo __('Submit') ?></span>
             </button>
         </div>
     </div>
-
 </form>
+<?php $form_url = $block->getCommentAjaxAction(); ?>
+<script type="text/x-magento-init">
+    {
+        "*": {
+            "OpenTechiz_Blog/js/commentajax": {
+                "AjaxCommentPostUrl": "<?php echo $form_url; ?>"
+            }
+        }
+    }
+</script>
