finish sendmail ajax

--- a/app/code/OpenTechiz/Blog/view/frontend/templates/formcomment.phtml
+++ b/app/code/OpenTechiz/Blog/view/frontend/templates/formcomment.phtml
@@ -5,12 +5,12 @@
         <div class="note"></div>
         <div class="field required">
             <label for="author" class="label">
-                <span><?php /* @escapeNotVerified */ echo __('Name') ?></span>
+                <span><?php /* @escapeNotVerified */ echo __('Email') ?></span>
             </label>
 
             <div class="control">
                 <input type="text" id="author"
-                       name="customer_id"
+                       name="email"
                        class="input-text" width="50%">
             </div>
         </div>
